CopadoAX_Core/main/default/objects/copado__User_Story__c/fields/copado__userStory_reason__c.field-meta.xml
<CustomField>
    <fullName>copado__userStory_reason__c</fullName>
    <label>So that...</label>
    <type>TextArea</type>
</CustomField>