CopadoAX_Core/main/default/objects/copado__User_Story__c/fields/copado__userStory_Role__c.field-meta.xml
<CustomField>
    <fullName>copado__userStory_Role__c</fullName>
    <label>As a...</label>
    <type>TextArea</type>
</CustomField>