CopadoAX_Core/main/default/objects/copado__User_Story__c/fields/Demo_Passed__c.field-meta.xml
<CustomField>
    <fullName>Demo_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked after a dev demo to business or Product Owner in case a story is set to be part of such a demo.</description>
    <inlineHelpText>To be checked after a dev demo to business or Product Owner in case a story is set to be part of such a demo.</inlineHelpText>
    <label>Demo Passed</label>
    <type>Checkbox</type>
</CustomField>