CopadoAX_Core/main/default/objects/copado__User_Story__c/fields/Demo_Required__c.field-meta.xml
<CustomField>
    <fullName>Demo_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked by business analysts if a story is being defined or developed if this story should be part of a dev demo to business users or the Product Owner.</description>
    <inlineHelpText>To be checked by business analysts if a story is being defined or developed if this story should be part of a dev demo to business users or the Product Owner.</inlineHelpText>
    <label>Demo Required</label>
    <type>Checkbox</type>
</CustomField>