CopadoAX_Core/main/default/objects/copado__User_Story__c/fields/DocumentationLocation__c.field-meta.xml
<CustomField>
    <fullName>DocumentationLocation__c</fullName>
    <label>Documentation Location</label>
    <type>Url</type>
</CustomField>