CopadoAX_Core/main/default/objects/copado__User_Story__c/fields/Enable_Logs__c.field-meta.xml
<CustomField>
    <fullName>Enable_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Logs</label>
    <type>Checkbox</type>
</CustomField>