CopadoAX_Core/main/default/objects/copado__User_Story__c/fields/HighestCodeViolation__c.field-meta.xml
<CustomField>
    <fullName>HighestCodeViolation__c</fullName>
    <label>Highest Code Violation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>