CopadoAX_Core/main/default/objects/copado__User_Story__c/fields/Lower_Code_Coverage_Approved__c.field-meta.xml
<CustomField>
    <fullName>Lower_Code_Coverage_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lower Code Coverage Approved</label>
    <type>Checkbox</type>
</CustomField>