CopadoAX_Core/main/default/objects/copado__User_Story__c/fields/PeerReviewPassed__c.field-meta.xml
<CustomField>
    <fullName>PeerReviewPassed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peer Review Passed</label>
    <type>Checkbox</type>
</CustomField>