CopadoAX_Core/main/default/objects/copado__User_Story__c/fields/Release_Status__c.field-meta.xml
<CustomField>
    <fullName>Release_Status__c</fullName>
    <label>Release Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Ready for SIT</fullName>
            </value>
            <value>
                <fullName>Deployed to SIT</fullName>
            </value>
            <value>
                <fullName>Ready for UAT</fullName>
            </value>
            <value>
                <fullName>Deployed to UAT</fullName>
            </value>
            <value>
                <fullName>Ready for Prod</fullName>
            </value>
            <value>
                <fullName>Deployed to Prod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>