CopadoAX_Core/main/default/objects/copado__User_Story__c/fields/SCAPassed__c.field-meta.xml
<CustomField>
    <fullName>SCAPassed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates, if the Static Code Analysis Results have been reviewed and passed. Filled in automatically based on rule violation handling.</description>
    <inlineHelpText>This field indicates, if the Static Code Analysis Results have been reviewed and passed. Filled in automatically based on rule violation handling.</inlineHelpText>
    <label>SCA Passed</label>
    <type>Checkbox</type>
</CustomField>