CopadoAX_Core/main/default/objects/copado__User_Story__c/fields/Story_Roles__c.field-meta.xml
<CustomField>
    <fullName>Story_Roles__c</fullName>
    <label>Story Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Engineers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>