CopadoAX_Core/main/default/objects/copado__User_Story__c/fields/TestScriptPassed__c.field-meta.xml
<CustomField>
    <fullName>TestScriptPassed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Script Passed</label>
    <type>Checkbox</type>
</CustomField>