CopadoAX_Core/main/default/objects/copado__User_Story__c/fields/TestScriptReady__c.field-meta.xml
<CustomField>
    <fullName>TestScriptReady__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Script Ready</label>
    <type>Checkbox</type>
</CustomField>