CopadoAX_Core/main/default/objects/copado__User_Story__c/fields/ViewInJira__c.field-meta.xml
<CustomField>
    <fullName>ViewInJira__c</fullName>
    <formula>HYPERLINK(&quot;https://copado.atlassian.net/browse/&quot;&amp; JIRA_key__c &amp;&quot;&amp;view=&quot;&amp;JIRA_key__c, JIRA_key__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View in Jira</label>
    <type>Text</type>
</CustomField>