CopadoAX_Core/main/default/objects/copado__User_Story__c/recordTypes/copado__Bug.recordType-meta.xml
<RecordType>
    <fullName>copado__Bug</fullName>
    <active>true</active>
    <label>Bug</label>
</RecordType>