CopadoAX_Core/main/default/objects/copado__User_Story__c/validationRules/CAXSCA_SCAMustBePassed.validationRule-meta.xml
<ValidationRule>
    <fullName>CAXSCA_SCAMustBePassed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  $Permission.OverrideCopadoQualityGates = FALSE, 
  OR( 
    AND(
      PRIORVALUE(copado__Promote_Change__c) = false,
      copado__Promote_Change__c = true
    ),
    AND(
      PRIORVALUE(copado__Promote_and_Deploy__c) = false,
      copado__Promote_and_Deploy__c = true
    )
  ),
  OR(
     SCAPassed__c = FALSE
  )
)</errorConditionFormula>
    <errorMessage>Before deploying the story the Static Code Analysis must pass without major issues. Please check with your Dev Lead or Release Manager for further infos.</errorMessage>
</ValidationRule>