CopadoAX_Core/main/default/objects/copado__User_Story__c/validationRules/Entergy_Code_Coverage.validationRule-meta.xml
<ValidationRule>
    <fullName>Entergy_Code_Coverage</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  copado__Has_Apex_Code__c = true,

  OR(  
    AND(
        PRIORVALUE(copado__Promote_Change__c) = false,
        copado__Promote_Change__c = true
    ),
    AND(
      PRIORVALUE(copado__Promote_and_Deploy__c) = false,
      copado__Promote_and_Deploy__c = true
    )
  ),
  OR(
    AND(
      Lower_Code_Coverage_Approved__c = false,
      copado__Apex_Code_Coverage__c &lt; copado__Minimum_Apex_Code_Coverage__c
    ),
    AND(
      Lower_Code_Coverage_Approved__c = true,
      copado__Apex_Code_Coverage__c &lt;= 0.79
    )
  )
)</errorConditionFormula>
    <errorMessage>you shall not pass</errorMessage>
</ValidationRule>