CopadoAX_Core/main/default/objects/copado__User_Story__c/validationRules/UAT_quality_gates_must_be_passed.validationRule-meta.xml
<ValidationRule>
    <fullName>UAT_quality_gates_must_be_passed</fullName>
    <active>false</active>
    <description>To deploy a story to stage it requires a successful test run.</description>
    <errorConditionFormula>AND(
  BEGINS(copado__Environment__r.Name, &quot;UAT&quot;), 
  OR(
    copado__Promote_and_Deploy__c = TRUE,
    copado__Promote_Change__c = TRUE
  ),
  OR(
    TestScriptPassed__c = FALSE
  )
)</errorConditionFormula>
    <errorMessage>To deploy a story to stage it requires a successful test run.</errorMessage>
</ValidationRule>