CopadoAX_Core/main/default/objects/copado__User_Story__c/listViews/The_First_release.listView-meta.xml
<ListView>
    <fullName>The_First_release</fullName>
    <columns>NAME</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Promote_Change__c</columns>
    <columns>copado__Release__c</columns>
    <columns>copado__Story_Points_SFDC__c</columns>
    <columns>copado__Story_Points_Other__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Epic__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Release__c</field>
        <operation>contains</operation>
        <value>1</value>
    </filters>
    <label>The First release</label>
    <language>en_US</language>
</ListView>